--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "source": [
     "# 4\n",
-    "!python3 -m spacy download en  # run in terminal once"
+    "python -m spacy download en  # run in terminal once"
    ]
   },
   {
