--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -1,12 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "wrapped-effect",
+   "metadata": {},
+   "source": [
+    "# 0 Data\n",
+    "Run this once in a terminal: (use python or python3 depending on your environment)\n",
+    "python3 -m spacy download en"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "overhead-terminology",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#run this code once, too\n",
     "import nltk\n",
     "nltk.download('stopwords')"
    ]
@@ -16,7 +27,14 @@
    "id": "amateur-powell",
    "metadata": {},
    "source": [
-    "# 1"
+    "# 1 Intro\n",
+    "In topic modeling with gensim (https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/), we followed a structured workflow to build an insightful topic model based on the Latent Dirichlet Allocation (LDA) algorithm.\n",
+    "\n",
+    "In this post, we will build the topic model using gensim’s native LdaModel and explore multiple strategies to effectively visualize the results using matplotlib plots.\n",
+    "\n",
+    "I will be using a portion of the 20 Newsgroups dataset since the focus is more on approaches to visualizing the results.\n",
+    "\n",
+    "Let’s begin by importing the packages and the 20 News Groups dataset."
    ]
   },
   {
@@ -53,7 +71,8 @@
    "id": "attached-bouquet",
    "metadata": {},
    "source": [
-    "# 2"
+    "# 2 Import NewsGroups Dataset\n",
+    "Let’s import the news groups dataset and retain only 4 of the target_names categories."
    ]
   },
   {
@@ -75,7 +94,8 @@
    "id": "qualified-lesbian",
    "metadata": {},
    "source": [
-    "# 3"
+    "# 3 Tokenize Sentences and Clean\n",
+    "Removing the emails, new line characters, single quotes and finally split the sentence into a list of words using gensim’s simple_preprocess(). Setting the deacc=True option removes punctuations."
    ]
   },
   {
@@ -105,8 +125,12 @@
    "id": "together-therapist",
    "metadata": {},
    "source": [
-    "# 4\n",
-    "python -m spacy download en  # run in terminal once"
+    "# 4 Build the Bigram, Trigram Models and Lemmatize\n",
+    "Let’s form the bigram and trigrams using the Phrases model. This is passed to Phraser() for efficiency in speed of execution.\n",
+    "\n",
+    "Next, lemmatize each word to its root form, keeping only nouns, adjectives, verbs and adverbs.\n",
+    "\n",
+    "We keep only these POS tags because they are the ones contributing the most to the meaning of the sentences. Here, I use spacy for lemmatization."
    ]
   },
   {
@@ -144,7 +168,10 @@
    "id": "disabled-arctic",
    "metadata": {},
    "source": [
-    "# 5"
+    "# 5 Build the Topic Model\n",
+    "To build the LDA topic model using LdaModel(), you need the corpus and the dictionary. Let’s create them first and then build the model. The trained topics (keywords and weights) are printed below as well.\n",
+    "\n",
+    "If you examine the topic key words, they are nicely segregate and collectively represent the topics we initially chose: Christianity, Hockey, MidEast and Motorcycles. Nice!"
    ]
   },
   {
@@ -180,7 +207,10 @@
    "id": "express-princess",
    "metadata": {},
    "source": [
-    "# 6"
+    "# 6 What is the Dominant topic and its percentage contribution in each document\n",
+    "In LDA models, each document is composed of multiple topics. But, typically only one of the topics is dominant. The below code extracts this dominant topic for each sentence and shows the weight of the topic and the keywords in a nicely formatted output.\n",
+    "\n",
+    "This way, you will know which document belongs predominantly to which topic."
    ]
   },
   {
@@ -228,7 +258,8 @@
    "id": "processed-mattress",
    "metadata": {},
    "source": [
-    "# 7"
+    "# 7 The most representative sentence for each topic\n",
+    "Sometimes you want to get samples of sentences that most represent a given topic. This code gets the most exemplar sentence for each topic."
    ]
   },
   {
@@ -264,7 +295,8 @@
    "id": "generic-tragedy",
    "metadata": {},
    "source": [
-    "# 8"
+    "# 8 Frequency Distribution of Word Counts in Documents\n",
+    "When working with a large number of documents, you want to know how big the documents are as a whole and by topic. Let’s plot the document word counts distribution."
    ]
   },
   {
@@ -335,7 +367,8 @@
    "id": "adult-litigation",
    "metadata": {},
    "source": [
-    "# 9"
+    "# 9 Word Clouds of Top N Keywords in Each Topic\n",
+    "Though you’ve already seen what are the topic keywords in each topic, a word cloud with the size of the words proportional to the weight is a pleasant sight. The coloring of the topics I’ve taken here is followed in the subsequent plots as well."
    ]
   },
   {
@@ -386,7 +419,12 @@
    "id": "appreciated-worth",
    "metadata": {},
    "source": [
-    "# 10"
+    "# 10 Word Counts of Topic Keywords\n",
+    "When it comes to the keywords in the topics, the importance (weights) of the keywords matters. Along with that, how frequently the words have appeared in the documents is also interesting to look.\n",
+    "\n",
+    "Let’s plot the word counts and the weights of each keyword in the same chart.\n",
+    "\n",
+    "You want to keep an eye out on the words that occur in multiple topics and the ones whose relative frequency is more than the weight. Often such words turn out to be less important. The chart I’ve drawn below is a result of adding several such words to the stop words list in the beginning and re-running the training process."
    ]
   },
   {
@@ -432,7 +470,9 @@
    "id": "entertaining-parker",
    "metadata": {},
    "source": [
-    "# 11"
+    "# 11 Sentence Chart Colored by Topic\n",
+    "Each word in the document is representative of one of the 4 topics. Let’s color each word in the given documents by the topic id it is attributed to.\n",
+    "The color of the enclosing rectangle is the topic assigned to the document."
    ]
   },
   {
@@ -493,7 +533,8 @@
    "id": "communist-programmer",
    "metadata": {},
    "source": [
-    "# 12"
+    "# 12 What are the most discussed topics in the documents?\n",
+    "Let’s compute the total number of documents attributed to each topic."
    ]
   },
   {
@@ -540,7 +581,10 @@
    "id": "judicial-penguin",
    "metadata": {},
    "source": [
-    "## 12.2"
+    "### Let’s make two plots:\n",
+    "\n",
+    "The number of documents for each topic by assigning the document to the topic that has the most weight in that document.\n",
+    "The number of documents for each topic by by summing up the actual weight contribution of each topic to respective documents."
    ]
   },
   {
@@ -578,7 +622,8 @@
    "id": "acute-warning",
    "metadata": {},
    "source": [
-    "# 13"
+    "# 13 t-SNE Clustering Chart\n",
+    "Let’s visualize the clusters of documents in a 2D space using t-SNE (t-distributed stochastic neighbor embedding) algorithm."
    ]
   },
   {
@@ -621,14 +666,6 @@
     "plot.scatter(x=tsne_lda[:,0], y=tsne_lda[:,1], color=mycolors[topic_num])\n",
     "show(plot)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "protected-tuition",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
