--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
-  {
+ {
    "cell_type": "markdown",
    "id": "wrapped-effect",
    "metadata": {},
    "source": [
-    "# 0 Data\n",
+    "# 0 Additional requirements\n",
     "Run this once in a terminal: (use python or python3 depending on your environment)\n",
-    "python3 -m spacy download en"
+    "\n",
+    "> python3 -m spacy download en"
    ]
   },
   {
