--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -8,7 +8,7 @@
     "# 0 Additional requirements\n",
     "Run this once in a terminal: (use python or python3 depending on your environment)\n",
     "\n",
-    "> python3 -m spacy download en"
+    "> python -m spacy download en"
    ]
   },
   {
