--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "source": [
     "# 0 Additional requirements\n",
-    "Run this once in a terminal: (use python or python3 depending on your environment)\n",
-    "\n",
-    "> python -m spacy download en"
+    "Run this only once:"
    ]
   },
   {
@@ -46,7 +44,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "# !{sys.executable} -m spacy download en\n",
+    "!{sys.executable} -m spacy download en\n",
     "import re, numpy as np, pandas as pd\n",
     "from pprint import pprint\n",
     "\n",
