--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -665,6 +665,29 @@
     "plot.scatter(x=tsne_lda[:,0], y=tsne_lda[:,1], color=mycolors[topic_num])\n",
     "show(plot)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "minus-trout",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "desirable-testament",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyLDAvis.gensim\n",
+    "pyLDAvis.enable_notebook()\n",
+    "vis = pyLDAvis.gensim.prepare(lda_model, corpus, dictionary=lda_model.id2word)\n",
+    "vis"
+   ]
   }
  ],
  "metadata": {
