Adapted the code for german dataset

--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -1,6 +1,6 @@
 {
  "cells": [
- {
+  {
    "cell_type": "markdown",
    "id": "wrapped-effect",
    "metadata": {},
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m spacy download en\n",
+    "!{sys.executable} -m spacy download de\n",
     "import re, numpy as np, pandas as pd\n",
     "from pprint import pprint\n",
     "\n",
@@ -57,8 +57,9 @@
     "\n",
     "# NLTK Stop words\n",
     "from nltk.corpus import stopwords\n",
-    "stop_words = stopwords.words('english')\n",
-    "stop_words.extend(['from', 'subject', 're', 'edu', 'use', 'not', 'would', 'say', 'could', '_', 'be', 'know', 'good', 'go', 'get', 'do', 'done', 'try', 'many', 'some', 'nice', 'thank', 'think', 'see', 'rather', 'easy', 'easily', 'lot', 'lack', 'make', 'want', 'seem', 'run', 'need', 'even', 'right', 'line', 'even', 'also', 'may', 'take', 'come'])\n",
+    "stop_words = stopwords.words('german')\n",
+    "# remove these 2 frequent words, even though we limit words by only nouns and filter stopwords, these 2 words somehow stay\n",
+    "stop_words.extend(['konnen', 'mussen'])\n",
     "\n",
     "%matplotlib inline\n",
     "warnings.filterwarnings(\"ignore\",category=DeprecationWarning)\n",
@@ -82,9 +83,9 @@
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df = pd.read_json('https://raw.githubusercontent.com/selva86/datasets/master/newsgroups.json')\n",
-    "df = df.loc[df.target_names.isin(['soc.religion.christian', 'rec.sport.hockey', 'talk.politics.mideast', 'rec.motorcycles']) , :]\n",
-    "print(df.shape)  #> (2361, 3)\n",
+    "df = pd.read_json('https://files.ifi.uzh.ch/cl/siclemat/lehre/fs21/tm/data/all_de_topics.jsonl', lines=True,nrows=5563)\n",
+    "df = df.loc[:]\n",
+    "print(df.shape)  #> (5563, 2)\n",
     "df.head()"
    ]
   },
@@ -145,13 +146,13 @@
     "bigram_mod = gensim.models.phrases.Phraser(bigram)\n",
     "trigram_mod = gensim.models.phrases.Phraser(trigram)\n",
     "\n",
-    "def process_words(texts, stop_words=stop_words, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV']):\n",
+    "def process_words(texts, stop_words=stop_words, allowed_postags=['NOUN']):\n",
     "    \"\"\"Remove Stopwords, Form Bigrams, Trigrams and Lemmatization\"\"\"\n",
     "    texts = [[word for word in simple_preprocess(str(doc)) if word not in stop_words] for doc in texts]\n",
     "    texts = [bigram_mod[doc] for doc in texts]\n",
     "    texts = [trigram_mod[bigram_mod[doc]] for doc in texts]\n",
     "    texts_out = []\n",
-    "    nlp = spacy.load('en', disable=['parser', 'ner'])\n",
+    "    nlp = spacy.load('de', disable=['parser', 'ner'])\n",
     "    for sent in texts:\n",
     "        doc = nlp(\" \".join(sent)) \n",
     "        texts_out.append([token.lemma_ for token in doc if token.pos_ in allowed_postags])\n",
@@ -666,7 +667,7 @@
     "show(plot)"
    ]
   },
- {
+  {
    "cell_type": "markdown",
    "id": "cutting-orleans",
    "metadata": {},
