Adapted the code for german dataset

--- a/TM3.ipynb
+++ b/TM3.ipynb
@@ -117,7 +117,7 @@
     "data = df.content.values.tolist()\n",
     "data_words = list(sent_to_words(data))\n",
     "print(data_words[:1])\n",
-    "# [['from', 'irwin', 'arnstein', 'subject', 're', 'recommendation', 'on', 'duc', 'summary', 'whats', 'it', 'worth', 'distribution', 'usa', 'expires', 'sat', 'may', 'gmt', ...trucated...]]"
+    "# [['ich', 'bitte', 'sie', 'namens', 'der', 'minderheit', 'diese', 'motion', 'abzulehnen', 'naturlich', 'machen', 'wir', 'uns', 'keine', 'illusion', 'damit', 'im', 'rat', 'durchzukommen', 'vielmehr', 'wird', 'es', 'auf', 'absehbare', 'zeit', 'einmal', 'der', 'souveran', 'sein', 'der', 'grundsatzlich', 'festlegen', 'wird', 'wie', 'viele', 'auslandeinsatze', 'die', 'schweizer', 'armee',..]]"
    ]
   },
   {
